; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_8t_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_8t_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32)* @hevc_hz_8t_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hz_8t_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %36 = load i32, i32* @ff_hevc_mask_arr, align 4
  %37 = call i64 @LD_SB(i32 %36)
  store i64 %37, i64* %35, align 8
  %38 = load i32*, i32** %7, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 -3
  store i32* %39, i32** %7, align 8
  %40 = call i32 @__msa_ldi_h(i32 128)
  store i32 %40, i32* %34, align 4
  %41 = load i32, i32* %34, align 4
  %42 = shl i32 %41, 6
  store i32 %42, i32* %34, align 4
  %43 = load i32*, i32** %11, align 8
  %44 = call i32 @LD_SH(i32* %43)
  store i32 %44, i32* %33, align 4
  %45 = load i32, i32* %33, align 4
  %46 = load i32, i32* %18, align 4
  %47 = load i32, i32* %19, align 4
  %48 = load i32, i32* %20, align 4
  %49 = load i32, i32* %21, align 4
  %50 = call i32 @SPLATI_H4_SH(i32 %45, i32 0, i32 1, i32 2, i32 3, i32 %46, i32 %47, i32 %48, i32 %49)
  %51 = load i64, i64* %35, align 8
  %52 = add nsw i64 %51, 2
  store i64 %52, i64* %22, align 8
  %53 = load i64, i64* %35, align 8
  %54 = add nsw i64 %53, 4
  store i64 %54, i64* %23, align 8
  %55 = load i64, i64* %35, align 8
  %56 = add nsw i64 %55, 6
  store i64 %56, i64* %24, align 8
  %57 = load i32, i32* %12, align 4
  %58 = ashr i32 %57, 2
  store i32 %58, i32* %13, align 4
  br label %59

59:                                               ; preds = %63, %6
  %60 = load i32, i32* %13, align 4
  %61 = add nsw i32 %60, -1
  store i32 %61, i32* %13, align 4
  %62 = icmp ne i32 %60, 0
  br i1 %62, label %63, label %193

63:                                               ; preds = %59
  %64 = load i32*, i32** %7, align 8
  %65 = load i32, i32* %8, align 4
  %66 = load i64, i64* %14, align 8
  %67 = load i64, i64* %15, align 8
  %68 = load i64, i64* %16, align 8
  %69 = load i64, i64* %17, align 8
  %70 = call i32 @LD_SB4(i32* %64, i32 %65, i64 %66, i64 %67, i64 %68, i64 %69)
  %71 = load i32, i32* %8, align 4
  %72 = mul nsw i32 4, %71
  %73 = load i32*, i32** %7, align 8
  %74 = sext i32 %72 to i64
  %75 = getelementptr inbounds i32, i32* %73, i64 %74
  store i32* %75, i32** %7, align 8
  %76 = load i64, i64* %14, align 8
  %77 = load i64, i64* %15, align 8
  %78 = load i64, i64* %16, align 8
  %79 = load i64, i64* %17, align 8
  %80 = call i32 @XORI_B4_128_SB(i64 %76, i64 %77, i64 %78, i64 %79)
  %81 = load i64, i64* %14, align 8
  %82 = load i64, i64* %14, align 8
  %83 = load i64, i64* %35, align 8
  %84 = load i64, i64* %22, align 8
  %85 = load i64, i64* %23, align 8
  %86 = load i64, i64* %24, align 8
  %87 = load i64, i64* %25, align 8
  %88 = load i64, i64* %26, align 8
  %89 = load i64, i64* %27, align 8
  %90 = load i64, i64* %28, align 8
  %91 = call i32 @VSHF_B4_SB(i64 %81, i64 %82, i64 %83, i64 %84, i64 %85, i64 %86, i64 %87, i64 %88, i64 %89, i64 %90)
  %92 = load i32, i32* %34, align 4
  store i32 %92, i32* %29, align 4
  %93 = load i64, i64* %25, align 8
  %94 = load i64, i64* %26, align 8
  %95 = load i64, i64* %27, align 8
  %96 = load i64, i64* %28, align 8
  %97 = load i32, i32* %18, align 4
  %98 = load i32, i32* %19, align 4
  %99 = load i32, i32* %20, align 4
  %100 = load i32, i32* %21, align 4
  %101 = load i32, i32* %29, align 4
  %102 = load i32, i32* %29, align 4
  %103 = load i32, i32* %29, align 4
  %104 = load i32, i32* %29, align 4
  %105 = call i32 @DPADD_SB4_SH(i64 %93, i64 %94, i64 %95, i64 %96, i32 %97, i32 %98, i32 %99, i32 %100, i32 %101, i32 %102, i32 %103, i32 %104)
  %106 = load i64, i64* %15, align 8
  %107 = load i64, i64* %15, align 8
  %108 = load i64, i64* %35, align 8
  %109 = load i64, i64* %22, align 8
  %110 = load i64, i64* %23, align 8
  %111 = load i64, i64* %24, align 8
  %112 = load i64, i64* %25, align 8
  %113 = load i64, i64* %26, align 8
  %114 = load i64, i64* %27, align 8
  %115 = load i64, i64* %28, align 8
  %116 = call i32 @VSHF_B4_SB(i64 %106, i64 %107, i64 %108, i64 %109, i64 %110, i64 %111, i64 %112, i64 %113, i64 %114, i64 %115)
  %117 = load i32, i32* %34, align 4
  store i32 %117, i32* %30, align 4
  %118 = load i64, i64* %25, align 8
  %119 = load i64, i64* %26, align 8
  %120 = load i64, i64* %27, align 8
  %121 = load i64, i64* %28, align 8
  %122 = load i32, i32* %18, align 4
  %123 = load i32, i32* %19, align 4
  %124 = load i32, i32* %20, align 4
  %125 = load i32, i32* %21, align 4
  %126 = load i32, i32* %30, align 4
  %127 = load i32, i32* %30, align 4
  %128 = load i32, i32* %30, align 4
  %129 = load i32, i32* %30, align 4
  %130 = call i32 @DPADD_SB4_SH(i64 %118, i64 %119, i64 %120, i64 %121, i32 %122, i32 %123, i32 %124, i32 %125, i32 %126, i32 %127, i32 %128, i32 %129)
  %131 = load i64, i64* %16, align 8
  %132 = load i64, i64* %16, align 8
  %133 = load i64, i64* %35, align 8
  %134 = load i64, i64* %22, align 8
  %135 = load i64, i64* %23, align 8
  %136 = load i64, i64* %24, align 8
  %137 = load i64, i64* %25, align 8
  %138 = load i64, i64* %26, align 8
  %139 = load i64, i64* %27, align 8
  %140 = load i64, i64* %28, align 8
  %141 = call i32 @VSHF_B4_SB(i64 %131, i64 %132, i64 %133, i64 %134, i64 %135, i64 %136, i64 %137, i64 %138, i64 %139, i64 %140)
  %142 = load i32, i32* %34, align 4
  store i32 %142, i32* %31, align 4
  %143 = load i64, i64* %25, align 8
  %144 = load i64, i64* %26, align 8
  %145 = load i64, i64* %27, align 8
  %146 = load i64, i64* %28, align 8
  %147 = load i32, i32* %18, align 4
  %148 = load i32, i32* %19, align 4
  %149 = load i32, i32* %20, align 4
  %150 = load i32, i32* %21, align 4
  %151 = load i32, i32* %31, align 4
  %152 = load i32, i32* %31, align 4
  %153 = load i32, i32* %31, align 4
  %154 = load i32, i32* %31, align 4
  %155 = call i32 @DPADD_SB4_SH(i64 %143, i64 %144, i64 %145, i64 %146, i32 %147, i32 %148, i32 %149, i32 %150, i32 %151, i32 %152, i32 %153, i32 %154)
  %156 = load i64, i64* %17, align 8
  %157 = load i64, i64* %17, align 8
  %158 = load i64, i64* %35, align 8
  %159 = load i64, i64* %22, align 8
  %160 = load i64, i64* %23, align 8
  %161 = load i64, i64* %24, align 8
  %162 = load i64, i64* %25, align 8
  %163 = load i64, i64* %26, align 8
  %164 = load i64, i64* %27, align 8
  %165 = load i64, i64* %28, align 8
  %166 = call i32 @VSHF_B4_SB(i64 %156, i64 %157, i64 %158, i64 %159, i64 %160, i64 %161, i64 %162, i64 %163, i64 %164, i64 %165)
  %167 = load i32, i32* %34, align 4
  store i32 %167, i32* %32, align 4
  %168 = load i64, i64* %25, align 8
  %169 = load i64, i64* %26, align 8
  %170 = load i64, i64* %27, align 8
  %171 = load i64, i64* %28, align 8
  %172 = load i32, i32* %18, align 4
  %173 = load i32, i32* %19, align 4
  %174 = load i32, i32* %20, align 4
  %175 = load i32, i32* %21, align 4
  %176 = load i32, i32* %32, align 4
  %177 = load i32, i32* %32, align 4
  %178 = load i32, i32* %32, align 4
  %179 = load i32, i32* %32, align 4
  %180 = call i32 @DPADD_SB4_SH(i64 %168, i64 %169, i64 %170, i64 %171, i32 %172, i32 %173, i32 %174, i32 %175, i32 %176, i32 %177, i32 %178, i32 %179)
  %181 = load i32, i32* %29, align 4
  %182 = load i32, i32* %30, align 4
  %183 = load i32, i32* %31, align 4
  %184 = load i32, i32* %32, align 4
  %185 = load i32*, i32** %9, align 8
  %186 = load i32, i32* %10, align 4
  %187 = call i32 @ST_SH4(i32 %181, i32 %182, i32 %183, i32 %184, i32* %185, i32 %186)
  %188 = load i32, i32* %10, align 4
  %189 = mul nsw i32 4, %188
  %190 = load i32*, i32** %9, align 8
  %191 = sext i32 %189 to i64
  %192 = getelementptr inbounds i32, i32* %190, i64 %191
  store i32* %192, i32** %9, align 8
  br label %59

193:                                              ; preds = %59
  ret void
}

declare dso_local i64 @LD_SB(i32) #1

declare dso_local i32 @__msa_ldi_h(i32) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B4_128_SB(i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B4_SB(i64, i64, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @DPADD_SB4_SH(i64, i64, i64, i64, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_SH4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
